--- a/PageSwitcher/PageSwitcher.csproj
+++ b/PageSwitcher/PageSwitcher.csproj
@@ -36,6 +36,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -54,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AttachedProperties.cs" />
+    <Compile Include="Converters.cs" />
     <Compile Include="Pages\ServiceMainPage.xaml.cs">
       <DependentUpon>ServiceMainPage.xaml</DependentUpon>
     </Compile>
